fix: fix style overflow #22, 24, 7, 25

--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -12,7 +12,7 @@ $headerFont: 'DynaPuff', cursive;
 html {
     height: 100%;
     max-width: 1920px;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
