--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -5,7 +5,7 @@
 html {
   height: 100%;
   max-width: 1920px;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
